kubernetes/reddit/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: reddit
    component: mongo
    comment-db: "true" # Лейбл в deployment, чтобы было понятно, что рзавернуто
    post-db: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddit
      component: mongo
  template:
    metadata:
      name: mongo
      labels:
        app: reddit
        component: mongo
        comment-db: "true"
        post-db: "true"
    spec:
        containers:
        - image: mongo:3.2
          name: mongo
          volumeMounts: # Точка монтирования в контейнере (не в POD-е)
          - name: mongo-persistent-storage
            mountPath: /data/db
        volumes: # Ассоциированные с POD-ом Volume-ы
# #  Старый тип volume'а (используемый ранее в ДЗ):
#         - name: mongo-persistent-storage
#           emptyDir: {} # При создании пода с таким типом просто создается пустой docker volume. При остановке POD'а содержимое emptyDir удалится навсегда. Хотя в общем случае падение POD'а не вызывает удаления Volume'а.
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
