kubernetes/reddit/ui-ingress.yml
---
apiVersion: networking.k8s.io/v1 # extensions/v1beta1
kind: Ingress
metadata:
  name: ui
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "false" # Отключаем проброс HTTP
spec:
  tls:
  - secretName: ui-ingress # Подключаем наш сертификат
  rules:
  - http:
      paths:
      - path: / # /*
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 9292

#Первый вариант по методичке - для Ingress вместе с прописанным LoadBalancer в ui-service.yml:
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ui
#   # annotations:
#   #   kubernetes.io/ingress.allow-http: "false"
# spec:
#   # tls:
#   # - secretName: ui-ingress
#   backend:
#     serviceName: ui
#     servicePort: 80 # Должен совпадать с портом в ui-service.yml


# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ui
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     kubernetes.io/ingress.allow-http: "false"
# spec:
#   tls:
#   - secretName: ui-ingress
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: ui
#             port:
#               number: 9292
